--- a/youtube2.html
+++ b/youtube2.html
@@ -61,17 +61,52 @@
                 </div>
             </div>
             <div class="profile">
-               <img class="img" src="https://avatarfiles.alphacoders.com/375/thumb-1920-375167.png" alt="">
-               <!-- <div class="dropdown">
-                 <div class="My-profile">
-                   <img class="img" src="https://yt3.googleusercontent.com/ytc/AIdro_m0-jNAtus69Z-2SCdFkqcIU6LXsEJ08jxvWj93uwSZoAc=s900-c-k-c0x00ffffff-no-rj" alt="">
+               <img class="img" src="https://cdnb.artstation.com/p/assets/images/images/054/013/737/large/nathan-rosengrun-21-ruby.jpg?1663579508" alt="">
+
+
+
+              <div class="dropdown">
+                <div class="My-profile">
+                  <div class="profile-img">
+                   <img class="pro-img" src="https://cdnb.artstation.com/p/assets/images/images/054/013/737/large/nathan-rosengrun-21-ruby.jpg?1663579508" alt="">
+                  </div>
                    <div class="username">
-                    <a class="name1" href="">Dhruv Sammarwar</a>
-                    <a class="name1" href="">@dhruvsammarwar1</a>
-                    <a href="">View Your Channal</a>
+                    <a class="name2" href="">Dhruv Sammarwar</a>
+                    <a class="name2" href="">@dhruvsammarwar1</a>
+                    <a class="name3" href="">View Your Channal</a>
                    </div>
+                </div>
+                <hr>
+               
+                 <div class="google-account">
+                    <a class="pro-icons" href=""><i style="padding-right: 20px;" class="fa-solid fa-g" id="icons2"></i>Google Account </a>
+                    <a class="pro-icons" href=""><i style="padding-right: 12px;" class="fa-solid fa-users-rectangle" id="pro-icon"></i>Switch Account <i style="padding-left: 100px;" class="fa-solid fa-angle-right"></i></a>
+                    <a class="pro-icons" href=""><i style="padding-right: 20px;" class="fa-solid fa-arrow-right-to-bracket" id="pro-icon"></i>Sign Out</a>
                  </div>
-               </div> -->
+                 <hr> 
+                 <div class="google-account">
+                    <a class="pro-icons" href=""><i style="padding-right: 20px;" class="fa-solid fa-circle-play" id="icons2"></i>Google Account</a>
+                    <a class="pro-icons" href=""><i style="padding-right: 20px;" class="fa-solid fa-circle-dollar-to-slot" id="pro-icon"></i>Switch Account</a>
+                 </div>
+                 <hr>
+                 <div class="google-account">
+                    <a class="pro-icons" href=""><i style="padding-right: 25px;" class="fa-solid fa-user" id="icons2"></i>Your data In Youtube</a>
+                    <a class="pro-icons" href=""><i style="padding-right: 26px;" class="fa-solid fa-moon" id="pro-icon"></i>Appearance: Light <i style="padding-left: 73px;" class="fa-solid fa-angle-right"></i></a>
+                    <a class="pro-icons" href=""><i style="padding-right: 18px;" class="fa-solid fa-language" id="icons2"></i>Language:English <i style="padding-left: 75px;" class="fa-solid fa-angle-right"></i></a>
+                    <a class="pro-icons" href=""><i style="padding-right: 18px;" class="fa-solid fa-user-shield" id="pro-icon"></i>Restricted Mode: Off <i style="padding-left: 59px;" class="fa-solid fa-angle-right"></i></a>
+                    <a class="pro-icons" href=""><i style="padding-right: 20px;" class="fa-solid fa-globe" id="icons2"></i>Location:India <i style="padding-left: 100px;" class="fa-solid fa-angle-right"></i></a>
+                    <a class="pro-icons" href=""><i style="padding-right: 18px;" class="fa-solid fa-keyboard" id="pro-icon"></i>Keyboard shortcuts</a>
+                 </div>
+                 <hr>
+                 <div class="google-account">
+                    <a class="pro-icons" href=""><i style="padding-right: 18px;" class="fa-solid fa-gear" id="pro-icon"></i>Setting</a>
+                 </div>
+                 <hr>
+                 <div class="google-account">
+                    <a class="pro-icons" href=""><i style="padding-right: 18px;" class="fa-solid fa-circle-question" id="pro-icon"></i>Help</a>
+                    <a class="pro-icons" href=""><i style="padding-right: 22px; padding-left: 8px;" class="fa-solid fa-exclamation" id="pro-icon"></i>Send Feedback</a>
+                 </div>
+              </div>
             </div>
         </div>
       </div>
@@ -200,6 +235,8 @@
                </p>
             </div>   
         </div>    
+
+    <div class="video-section">    
         <div class="cetegory"> 
                <div class="fav" style="color: white; background-color: black;">All</div>
                <div class="fav">Music</div>
@@ -223,12 +260,6 @@
                <div class="fav">Hollywood</div> 
         </div> 
     
-
-
-
-
-
-
     <div class="container5">
             <div class="container2">
                 <div class="image">
@@ -593,6 +624,7 @@
                 </div>
             </div>
         </div> 
-    </div>  
+    </div>
+</div>  
 </body>
 </html>
